@@ -3,6 +3,7 @@
 
 Version 0.0.4b (in progress)
 * [Added] Owner email to team profile.
+* [Improved] Leagues where the league name has changed can now be fully processed.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
